# pkmn3save

./: Readme.md  pyproject.toml
pkmn3save/: __init__.py  hall_of_fame.py  mapping.py  save_file.py
pkmn3save/data/: pokemon.csv  pokemon.py
pkmn3save/data_types/: __init__.py  pokemon.py  strings.py
pkmn3save/game_save/: __init__.py  game_save.py  team_items.py  trainer_info.py
pkmn3save/tools/: nat_dex_nums.py
