[tool.poetry]
name = "pkmn3save"
version = "0.1.0"
description = ""
authors = ["Peter DeVita <mewtwo2643@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = {version = "^2.31.0", optional = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
